--- a/index .html
+++ b/index .html
@@ -26,7 +26,7 @@
                         <article class="card h-100; text-white" style="background-color: #733FC8 ">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
-                                    <img src="image-daniel.jpg" class="border border-secondary border-3 rounded-circle">
+                                    <img src="images/image-daniel.jpg" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h5 class="m-0 h6"> Daniel </h5>
                                         <p class="m-0 h6"> Clifford </p>
@@ -48,7 +48,7 @@
                         <article class="card h-100 text-white" style="background-color: #49556B ">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
-                                    <img src="image-jonathan.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <img src="images/image-jonathan.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h5 class="m-0 h6"> Jonathan </h5>
                                         <p class="m-0 h6"> Walters </p>
@@ -67,7 +67,7 @@
                         <article class="card h-100" style="background-color: #EDF2F8 ">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
-                                    <img src="image-jeanette.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <img src="images/image-jeanette.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h5 class="m-0 h6"> Jeanette </h5>
                                         <p class="m-0 h6"> Maman </p>
@@ -86,7 +86,7 @@
                         <article class="card h-100 bg-dark text-white shadow">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
-                                    <img src="image-patrick.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                                    <img src="images/image-patrick.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                                     <div class="ps-3">
                                         <h5 class="m-0 h6"> Patrick </h5>
                                         <p> Abraws </p>
@@ -111,7 +111,7 @@
                 <article class="card h-100 " style="background-color: #EDF2F8 ">
                     <div class="card-body">
                         <div class="d-flex mb-3">
-                            <img src="image-kira.jpg" alt="" class="border border-secondary border-3 rounded-circle">
+                            <img src="images/image-kira.jpg" alt="" class="border border-secondary border-3 rounded-circle">
                             <div class="ps-3">
                                 <h5 class="m-0 h6"> Kira </h5>
                                 <p class="m-0 h6"> White  </p>
